# brain-mri-tumor-segmentation

./: .gitignore  README.md  pyproject.toml
artifacts/: README.md
artifacts/manifests/: summary.json  test.json  train.json  val.json
artifacts/smoke_manifests/: summary.json  test.json  train.json  val.json
artifacts/test_upload_brats_case/: README.txt
configs/: inference.toml  train_baseline.toml  train_baseline_3060_12gb.toml  train_baseline_3060_12gb_fast_persistent.toml  train_baseline_3060_12gb_max_safe.toml  train_baseline_3060_12gb_practical_fast.toml  train_baseline_3060_12gb_quality.toml  train_baseline_3060_12gb_windows_workers.toml  train_baseline_4060_laptop.toml  train_baseline_8gb.toml  train_improved.toml  train_improved_3060_12gb.toml  train_improved_3060_12gb_windows_workers.toml  train_improved_4060_laptop.toml  train_improved_8gb.toml  train_smoke.toml  train_transfer_monai_segresnet_3060_12gb.toml  train_transfer_monai_segresnet_3060_12gb_et_refine_v2.toml
docs/: colab_workflow.md  diploma_outline.md  experiment_notes.md  project_outline.md
scripts/: benchmark_training_profiles.py  check_labels.py  generate_diploma_assets.py  generate_research_assets.py  generate_synthetic_brats.py  smoke_num_workers.py
src/brain_mri_segmentation/: __init__.py  settings.py
tests/: conftest.py  test_api.py  test_brats_validation.py  test_datasets.py  test_inference.py  test_labels.py  test_metrics.py  test_models.py  test_training.py  test_transforms.py  test_ui.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json
(+19 files in other folders)
