[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-mri-segmentation"
version = "0.1.0"
description = "Research prototype for automatic brain tumor segmentation on multimodal MRI."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "einops>=0.8,<1.0",
    "fastapi>=0.115,<1.0",
    "huggingface_hub>=0.24,<2.0",
    "monai>=1.3,<2.0",
    "nibabel>=5.2,<6.0",
    "numpy>=1.26,<3.0",
    "Pillow>=10.3,<12.0",
    "python-multipart>=0.0.9,<1.0",
    "requests>=2.32,<3.0",
    "scipy>=1.13,<2.0",
    "streamlit>=1.44,<2.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
    "torch>=2.3,<2.6",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
brain-seg-api = "brain_mri_segmentation.api.main:run"
brain-seg-manifest = "brain_mri_segmentation.ml.brats:main"
brain-seg-train = "brain_mri_segmentation.ml.training:main"
brain-seg-eval = "brain_mri_segmentation.ml.evaluate:main"
brain-seg-ui = "brain_mri_segmentation.ui.app:launch"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
